# vapoursynth-hqdn3d

./: .gitignore  Makefile.am  configure.ac  readme.rst
src/: hqdn3d.cpp
